samples/_failures_safe/1761413042_80a793_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7ca5f316.c: In function ‘main’:
./samples/SAFE/__tmp_7ca5f316.c:173:12: error: missing terminating " character
  173 |     printf("\
      |            ^~
./samples/SAFE/__tmp_7ca5f316.c:173:5: error: expected expression at end of input
  173 |     printf("\
      |     ^~~~~~
./samples/SAFE/__tmp_7ca5f316.c:173:5: error: expected declaration or statement at end of input
